Fixed drop-down list text alignment when used within a center-aligned container.

--- a/Web Site/Ewf/Styles/Basic.css
+++ b/Web Site/Ewf/Styles/Basic.css
@@ -345,6 +345,9 @@ ewfFlowCheckboxAllStates > ewfCheckbox {
 }
 
 /* list controls */
+ewfDropDownListContainer > ewfDropDownList {
+	text-align: start;
+}
 ewfStackFormItemList > ewfFormItemListItem > ewfFormItemListItemContent > ewfDropDownListContainer > ewfDropDownList,
 ewfGridFormItemList > ewfFormItemListItem > ewfFormItemListItemContent > ewfDropDownListContainer > ewfDropDownList,
 ewfControlStackItem > ewfDropDownListContainer > ewfDropDownList,
